# SGProofCircuits

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CommonBuildParameters.cmake  config.cmake.in  functions.cmake
include/: MPCVerifierCircuit.hpp  SGGenerateProofs.hpp  TransactionVerifierCircuit.hpp
src/: SGGenerateProofs.cpp
src/circuits/: MPCVerifierCircuit.cpp  TransactionCircuit.cpp  TransactionVerifierCircuit.cpp  TwoFactor.cpp
test/: MPCVerifierCircuit_test.cpp  SGGenerateProofs_test.cpp  TransactionVerfierCircuit_test.cpp
